--- a/src/pages/lut.astro
+++ b/src/pages/lut.astro
@@ -3,6 +3,8 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'LUT - Cities Skylines Modding';
+import ResponsiveImage from '../components/ResponsiveImage.astro';
+import { images } from '../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -16,7 +18,19 @@ const title = 'LUT - Cities Skylines Modding';
 				<div class="lg:w-2/3">
 					<p>LUT stands for look-up table. It's a map of colors which allows applying color correction and adjustments to the image.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/DBtIo5s.jpg" target="null"><img src="https://i.imgur.com/DBtIo5s.jpg" /></a><p class="explanation">
+					<a href="/images/lut/comp.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.comp}
+							naturalHeight={540}
+							naturalWidth={960}
+							srcWidths={[300, 400, 500, 600, 800, 900]}
+							alt="Comparison between the default LUT without any adjustments and a finished modified LUT"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						Comparison between the default LUT without any adjustments and a finished modified LUT. Using <a
 							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656">Relight</a
 						> with default/recommended settings.
