--- a/src/pages/mod/detail.astro
+++ b/src/pages/mod/detail.astro
@@ -3,6 +3,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Detail - Cities Skylines Modding';
+import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -21,7 +23,19 @@ const title = 'Detail - Cities Skylines Modding';
 						This article assumes you are familiar with prop and tree asset creation.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/zklaRPz.jpg" target="null"><img src="https://i.imgur.com/zklaRPz.jpg" /></a><p class="explanation">
+					<a href="/images/mod/detail/detnat.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.detnat}
+							naturalHeight={512}
+							naturalWidth={512}
+							srcWidths={[300, 400, 500]}
+							alt="Official detail nature pack"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-square object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						Official <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1442615478">Detail Nature</a> pack including various grass, plant,
 						mushroom, twig props and trees.
 					</p>
@@ -36,9 +50,19 @@ const title = 'Detail - Cities Skylines Modding';
 						official Detail Nature pack.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/5C2ySXe.jpg" target="null"><img src="https://i.imgur.com/5C2ySXe.jpg" /></a><p class="explanation">
-						Diffuse texture examples from Detail Nature.
-					</p>
+					<a href="/images/mod/detail/detdiffuse.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.detdiffuse}
+							naturalHeight={512}
+							naturalWidth={512}
+							srcWidths={[300, 400, 500]}
+							alt="Diffuse texture examples from Detail Nature"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-square object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">Diffuse texture examples from Detail Nature.</p>
 				</div>
 			</div>
 			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="color">Color</h3>
@@ -47,9 +71,19 @@ const title = 'Detail - Cities Skylines Modding';
 				<div class="lg:w-2/3"><p>For props, the color map works as usual - the white parts will be affected by the color variation.</p></div><div
 					class="lg:w-1/3"
 				>
-					<a href="https://i.imgur.com/i8TTJWj.jpg" target="null"><img src="https://i.imgur.com/i8TTJWj.jpg" /></a><p class="explanation">
-						Diffuse texture and color map for props(left) and trees(right).
-					</p>
+					<a href="/images/mod/detail/detc.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.detc}
+							naturalHeight={256}
+							naturalWidth={768}
+							srcWidths={[300, 400, 500, 600, 700]}
+							alt="Diffuse texture examples from Detail Nature"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">Diffuse texture and color map for props(left) and trees(right).</p>
 				</div>
 			</div>
 			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="trees">Trees</h4>
