--- a/src/pages/normal-maps.astro
+++ b/src/pages/normal-maps.astro
@@ -3,6 +3,8 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'Normal Maps - Cities Skylines Modding';
+import ResponsiveImage from '../components/ResponsiveImage.astro';
+import { images } from '../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -31,7 +33,19 @@ const title = 'Normal Maps - Cities Skylines Modding';
 						/>.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/RLIMzQX.png" target="null"><img src="https://i.imgur.com/RLIMzQX.png" /></a><p class="explanation">
+					<a href="/images/normalmaps/regularnm.png" target="_blank">
+						<ResponsiveImage
+							src={images.regularnm}
+							naturalHeight={128}
+							naturalWidth={384}
+							srcWidths={[300, 350]}
+							alt="A regular normal map without any inverted channels"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						A regular normal map without any inverted channels and its red and green channels shown separately. The letters are supposed to look extruded in
 						this example.
 					</p>
@@ -87,9 +101,19 @@ const title = 'Normal Maps - Cities Skylines Modding';
 						The water normal map is animated ingame and constantly fades between a regular and an inverted version.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/MjT23We.png" target="null"><img src="https://i.imgur.com/MjT23We.png" /></a><p class="explanation">
-						A normal map with an inverted green channel and its appearance ingame.
-					</p>
+					<a href="/images/normalmaps/themeig.png" target="_blank">
+						<ResponsiveImage
+							src={images.themeig}
+							naturalHeight={344}
+							naturalWidth={384}
+							srcWidths={[300, 350]}
+							alt="A normal map with an inverted green channel"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-square object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">A normal map with an inverted green channel and its appearance ingame.</p>
 				</div>
 			</div>
 		</div>
