--- a/src/pages/shader/animuv.astro
+++ b/src/pages/shader/animuv.astro
@@ -3,6 +3,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'AnimUV Shader - Cities Skylines Modding';
+import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -26,7 +28,19 @@ const title = 'AnimUV Shader - Cities Skylines Modding';
 						/>, a new method for saving shader parameters by boformer has removed the requirement for a mod. Vehicle sub-meshes still require the mod.
 					</p><p class="mt-4">This article assumes you are familiar with regular prop asset creation.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/MvDLymL.jpg" target="null"><img src="https://i.imgur.com/MvDLymL.jpg" /></a><p class="explanation">
+					<a href="/images/shader/animuv.jpeg" target="_blank">
+						<ResponsiveImage
+							src={images.animuv}
+							naturalHeight={1080}
+							naturalWidth={1920}
+							srcWidths={[300, 400, 500, 600, 800]}
+							alt="Example of a scrolling LED sign"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						Example of a <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=940299860">scrolling LED sign</a> AnimUV prop.
 					</p>
 				</div>
