--- a/src/pages/shader/rotors-vehicle.astro
+++ b/src/pages/shader/rotors-vehicle.astro
@@ -3,6 +3,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Rotors Vehicles - Cities Skylines Modding';
+import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -26,9 +28,19 @@ const title = 'Rotors Vehicles - Cities Skylines Modding';
 						/> and regular vehicle asset creation using sub-meshes.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/Rcpq704.jpg" target="null"><img src="https://i.imgur.com/Rcpq704.jpg" /></a><p class="explanation">
-						Semi-transparent windows on a car.
-					</p>
+					<a href="/images/shader/rotors-vehicle/step1.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.rotorstep}
+							naturalHeight={420}
+							naturalWidth={760}
+							srcWidths={[300, 400, 500, 600, 700]}
+							alt="Semi-transparent windows on a car"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">Semi-transparent windows on a car.</p>
 				</div>
 			</div>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="limitations">Limitations</h2>
@@ -58,7 +70,19 @@ const title = 'Rotors Vehicles - Cities Skylines Modding';
 						will spin.
 					</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/mc34lyU.jpg" target="null"><img src="https://i.imgur.com/mc34lyU.jpg" /></a><p class="explanation">
+					<a href="/images/shader/rotors-vehicle/normals.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.rotornormals}
+							naturalHeight={572}
+							naturalWidth={919}
+							srcWidths={[300, 400, 500, 600, 700, 900]}
+							alt="Car windows split into 4 sub-meshes"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						Car windows split into 4 sub-meshes. Normals of each mesh are facing straight on an axis. The side windows will spin around X-axis, the windshield
 						around Y, the rear window around Z. Note that ingame the Y-axis is up/down.
 					</p>
