--- a/src/pages/shader/rotors.astro
+++ b/src/pages/shader/rotors.astro
@@ -3,6 +3,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Rotors Shader - Cities Skylines Modding';
+import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -21,9 +23,19 @@ const title = 'Rotors Shader - Cities Skylines Modding';
 						normal building.
 					</p><p class="mt-4">This article assumes you are familiar with regular prop and building asset creation.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/t3JyVsV.jpg" target="null"><img src="https://i.imgur.com/t3JyVsV.jpg" /></a><p class="explanation">
-						Rotors shader used for glass and fake water.
-					</p>
+					<a href="/images/shader/rotors-transparent.jpeg" target="_blank">
+						<ResponsiveImage
+							src={images.rotortransparent}
+							naturalHeight={420}
+							naturalWidth={760}
+							srcWidths={[300, 400, 500, 600, 700]}
+							alt="Rotors shader used for glass and fake water"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">Rotors shader used for glass and fake water.</p>
 				</div>
 			</div>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="limitations">Limitations</h2>
