--- a/src/pages/shader/vehicle-wheels.astro
+++ b/src/pages/shader/vehicle-wheels.astro
@@ -3,6 +3,8 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Vehicle Wheels - Cities Skylines Modding';
+import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -21,7 +23,19 @@ const title = 'Vehicle Wheels - Cities Skylines Modding';
 						which are made of multiple separate parts, or even wheels which don't touch the ground.
 					</p><p class="mt-4">This article assumes you are familiar with regular vehicle asset creation.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/zFeZlE2.png" target="null"><img src="https://i.imgur.com/zFeZlE2.png" /></a><p class="explanation">
+					<a href="/images/shader/vehicle-wheels/bike1.png" target="_blank">
+						<ResponsiveImage
+							src={images.bike1}
+							naturalHeight={837}
+							naturalWidth={839}
+							srcWidths={[300, 400, 500, 600, 800]}
+							alt="Bicycle vertex painted for custom multi-part wheels"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-square object-cover"
+							loading="eager"
+						/></a
+					><p class="explanation">
 						Bicycle vertex painted for custom multi-part wheels. Yellow gizmos show where the wheels will be. The pedals will also become a "wheel" for extra
 						animation.
 					</p>
